--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,6 +3,38 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Roboto", sans-serif;
+  background: #f5f5f5;
+}
+
+.ui-w-30 {
+  width: 30px !important;
+  height: auto;
+}
+
+.rounded-circle {
+  border-radius: 50% !important;
+}
+
+.font-weight-bold {
+  font-weight: 500 !important;
+}
+
+.container-p-y {
+  padding-top: 1.5rem !important;
+  padding-bottom: 1.5rem !important;
+}
+
+.text-tiny {
+  font-size: 70% !important;
+}
+
+.sidenav-divider {
+  width: 100%;
+  border: 0;
+  border-top: 1px solid;
+  margin-bottom: 0.75rem;
+  padding: 0;
+  border-color: rgba(255, 255, 255, 0.06) !important;
 }
 
 .login-form {
@@ -33,6 +65,185 @@ body {
   width: 100%;
 }
 
+.layout-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.layout-wrapper .layout-inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  max-width: 100%;
+}
+
+.layout-wrapper .layout-inner .layout-sidenav {
+  background-color: #2f3337 !important;
+  color: #9d9fa1;
+  height: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto;
+}
+
+.layout-wrapper .layout-inner .layout-sidenav .app-brand {
+  padding-right: 1.75rem;
+  padding-left: 1.75rem;
+  padding-top: 1rem;
+  height: 66px;
+}
+
+.layout-wrapper .layout-inner .layout-sidenav .app-brand span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.layout-wrapper .layout-inner .layout-sidenav .app-brand span a {
+  text-decoration: none;
+  font-size: 24px;
+  color: #fff;
+}
+
+.layout-wrapper .layout-inner .layout-sidenav .sidenav-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  margin: 0;
+  padding: 0;
+}
+
+.layout-wrapper .layout-inner .layout-sidenav .sidenav-content .sidenav-item {
+  margin: 0.0625rem 0;
+  width: 15.625rem;
+}
+
+.layout-wrapper .layout-inner .layout-sidenav .sidenav-content .sidenav-item .sidenav-link {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0.75rem 2rem;
+  color: #9d9fa1;
+  text-decoration: none;
+  border: none;
+  background: transparent;
+  width: 100%;
+  cursor: pointer;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+}
+
+.layout-wrapper .layout-inner .layout-sidenav .sidenav-content .sidenav-item .sidenav-link:focus {
+  outline: none;
+}
+
+.layout-wrapper .layout-inner .layout-sidenav .sidenav-content .sidenav-item .sidenav-link:hover {
+  color: #fff;
+}
+
+.layout-wrapper .layout-inner .layout-sidenav .sidenav-content .sidenav-item .sidenav-toggle:after {
+  right: 2rem;
+  content: "";
+  position: absolute;
+  top: 50%;
+  display: block;
+  width: 0.42em;
+  height: 0.42em;
+  border: 1px solid;
+  border-top: 0;
+  border-right: 0;
+  -webkit-transform: translateY(-50%) rotate(45deg);
+  transform: translateY(-50%) rotate(45deg);
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+  transition-property: -webkit-transform, transform;
+}
+
+.layout-wrapper .layout-inner .layout-sidenav .sidenav-content .sidenav-item .sidenav-toggle.open:after {
+  -webkit-transform: translateY(-50%) rotate(-45deg);
+          transform: translateY(-50%) rotate(-45deg);
+}
+
+.layout-wrapper .layout-inner .layout-sidenav .sidenav-content .sidenav-item .sidenav-menu {
+  -webkit-transition: background-color 0.2s;
+  transition: background-color 0.2s;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  margin: 0;
+  padding: 0;
+}
+
+.layout-wrapper .layout-inner .layout-sidenav .sidenav-content .sidenav-item .sidenav-menu .sidenav-item .sidenav-link {
+  padding-left: 4rem;
+}
+
+.layout-wrapper .layout-inner .layout-sidenav .sidenav-content .sidenav-item .sidenav-menu .sidenav-item .sidenav-link:hover {
+  color: #fff;
+}
+
+.layout-wrapper .layout-inner .layout-sidenav .sidenav-content .sidenav-item .sidenav-menu.open {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.layout-wrapper .layout-inner .layout-sidenav .sidenav-content .sidenav-item.active {
+  background-color: #393d41;
+}
+
+.layout-wrapper .layout-inner .layout-sidenav .sidenav-content .sidenav-item.active .sidenav-link {
+  color: #fff;
+}
+
+.layout-wrapper .layout-inner .layout-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  width: 0;
+  min-width: 0;
+  max-width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-navbar {
+  min-height: 66px;
+}
+
 .navbar-collapse {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
@@ -54,9 +265,33 @@ body {
   left: auto;
 }
 
-@media (max-width: 1000px) {
+@media (min-width: 576px) {
+  .text-sm-right {
+    text-align: right !important;
+  }
+}
+
+@media (max-width: 991px) {
   .login-form {
     width: 50%;
+  }
+  .layout-sidenav {
+    position: fixed !important;
+    top: 0 !important;
+    height: 100% !important;
+    left: 0 !important;
+    margin-right: 0 !important;
+    margin-left: 0 !important;
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+    will-change: transform, -webkit-transform;
+  }
+}
+
+@media (min-width: 992px) {
+  .container-fluid {
+    padding-right: 2rem;
+    padding-left: 2rem;
   }
 }
 /*# sourceMappingURL=index.css.map */
