--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,9 +6,175 @@ body {
   background: #f5f5f5;
 }
 
+.spec {
+  padding-top: 0.7rem;
+}
+
+hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: none;
+  opacity: 0.1;
+}
+
+.alert-dark-warning {
+  background-color: #ffd950;
+  color: #665720;
+}
+
+.alert-dark-danger {
+  background-color: #d9534f;
+  color: #fff;
+}
+
+.alert-dark-success {
+  background-color: #02bc77;
+  color: #fff;
+}
+
+.badge {
+  font-weight: 400;
+}
+
+.badge-warning {
+  background-color: #ffd950;
+  color: #665720;
+}
+
+.badge-danger {
+  background-color: #d9534f;
+  color: #fff;
+}
+
+.badge-primary {
+  background-color: #775cdc;
+  color: #fff;
+}
+
+.badge-success {
+  background-color: #02bc77;
+  color: #fff;
+}
+
+.badge-outline-danger {
+  background-color: transparent;
+  -webkit-box-shadow: inset 0 0 0 1px #d9534f;
+          box-shadow: inset 0 0 0 1px #d9534f;
+  color: #d9534f;
+}
+
+.badge-outline-primary {
+  background-color: transparent;
+  -webkit-box-shadow: inset 0 0 0 1px #775cdc;
+          box-shadow: inset 0 0 0 1px #775cdc;
+  color: #775cdc;
+}
+
+.badge-outline-info {
+  background-color: transparent;
+  -webkit-box-shadow: inset 0 0 0 1px #28c3d7;
+          box-shadow: inset 0 0 0 1px #28c3d7;
+  color: #28c3d7;
+}
+
+.btn-xs {
+  padding: 0 0.5rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+}
+
+.modal .modal-body {
+  font-size: 1rem;
+}
+
+.btn-warning {
+  color: #000;
+  background-color: #ffd950;
+  border-color: #ffd950;
+}
+
+.btn-danger {
+  color: #fff;
+  background-color: #d9534f;
+  border-color: #d9534f;
+}
+
+.float-right {
+  float: right !important;
+}
+
+.icon {
+  margin-right: 0.5rem;
+}
+
+.card {
+  border: none;
+}
+
 .ui-w-30 {
   width: 30px !important;
   height: auto;
+}
+
+.ui-w-40 {
+  width: 30px !important;
+  height: auto;
+}
+
+.ui-w-50 {
+  width: 50px !important;
+  height: auto;
+}
+
+.ml-3 {
+  margin-left: 1rem !important;
+}
+
+.pr-3,
+.px-3 {
+  padding-right: 1rem !important;
+}
+
+.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.btn-group-justified {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+  border-collapse: separate;
+}
+
+.btn-group-justified .btn,
+.btn-group-justified .btn-group {
+  float: none;
+  display: table-cell;
+  width: 1%;
+}
+
+.btn-group-justified .btn .btn,
+.btn-group-justified .btn-group .btn {
+  width: 100%;
+}
+
+.pull-right {
+  float: right;
+}
+
+.ui-bordered {
+  border: 1px solid rgba(24, 28, 33, 0.06);
+}
+
+.badge-count {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .rounded-circle {
@@ -35,6 +201,16 @@ body {
   margin-bottom: 0.75rem;
   padding: 0;
   border-color: rgba(255, 255, 255, 0.06) !important;
+}
+
+.file-upload-btn {
+  border: none;
+  background: none;
+  color: #1e70cd;
+}
+
+.form-check-label {
+  cursor: pointer;
 }
 
 .login-form {
@@ -144,6 +320,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 0.75rem 2rem;
   color: #9d9fa1;
   text-decoration: none;
@@ -242,6 +421,144 @@ body {
 
 .layout-wrapper .layout-inner .layout-container .layout-navbar {
   min-height: 66px;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .desc-editor {
+  border: 1px solid #ccc;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .desc-editor textarea {
+  border: none;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .desc-editor .desc-footer {
+  border-top: 1px solid #ccc;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .desc-editor .desc-footer button {
+  font-size: 14px;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .add-order-btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 50px;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .add-order-btn button {
+  width: 100%;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .files-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 1rem 0;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .files-group .file-element {
+  border: 1px solid #ccc;
+  border-radius: 0.5rem;
+  margin-right: 1rem;
+  padding: 0.5rem;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .files-group .file-element span {
+  text-decoration: underline;
+  color: #1e70cd;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .files-group .file-element button {
+  border: none;
+  background: none;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-type-btn-group {
+  width: 100%;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-type-btn-group label a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-table-section .row {
+  margin-bottom: 0.5em;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-table-section .table-length label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-table-section .table-length label select {
+  width: auto;
+  display: inline-block;
+  margin: 0 0.5rem;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-table-section .table-search label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-table-section .table-search input {
+  width: auto;
+  display: inline-block;
+  margin-left: 0.5em;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-table-section .table th {
+  font-size: 14px;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section .media {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .order-section p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  text-align: justify;
+  white-space: pre-wrap;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .cancel-order .form-group {
+  margin-bottom: 0.5rem;
+}
+
+.layout-wrapper .layout-inner .layout-container .layout-content .content-chat .media-body {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .navbar-collapse {
